force-app/main/default/objects/redwing__ILT_Roster__c/redwing__ILT_Roster__c.object-meta.xml
<CustomObject>
    <label>ILT Roster</label>
    <nameField>
        <displayFormat>RSTR-{00000000}</displayFormat>
        <label>ILT Roster Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILT Rosters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>