force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Attendance_Status__c</fullName>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>No_Show</fullName>
                <label>No Show</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>