force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__Attended__c.field-meta.xml
<CustomField>
    <fullName>redwing__Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>