force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__Grade__c.field-meta.xml
<CustomField>
    <fullName>redwing__Grade__c</fullName>
    <label>Grade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>