force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__ILT_Class__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ILT Class</label>
    <referenceTo>redwing__ILT_Class__c</referenceTo>
    <relationshipLabel>ILT Rosters</relationshipLabel>
    <relationshipName>ILT_Rosters</relationshipName>
    <type>Lookup</type>
</CustomField>