force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__Learning_Assignment__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Assignment__c</fullName>
    <label>Learning Assignment</label>
    <referenceTo>redwing__Learning_Assignment__c</referenceTo>
    <relationshipLabel>ILT Rosters</relationshipLabel>
    <relationshipName>ILT_Rosters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>