force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__Process_Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Process_Status__c</fullName>
    <inlineHelpText>Process status that is used for sending emails to users.</inlineHelpText>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>