force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Registered_Date__c</fullName>
    <label>Registered Date</label>
    <type>Date</type>
</CustomField>