force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>