force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__vILT_Join_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__vILT_Join_URL__c</fullName>
    <label>vILT Join URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>