force-app/main/default/objects/redwing__ILT_Roster__c/fields/redwing__vILT_Registrant_Key__c.field-meta.xml
<CustomField>
    <fullName>redwing__vILT_Registrant_Key__c</fullName>
    <label>vILT Registrant Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>